--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -15,9 +15,6 @@ tag = "tags"
 pygmentsCodefences = true
 pygmentsStyle = "vs"
 
-# Integrations
-googleAnalytics = "UA-XXXXXX-YY"
-
 # Hightlight theme
 [markup.highlight]
   style = "github"
@@ -50,16 +47,9 @@ googleAnalytics = "UA-XXXXXX-YY"
   # Bio is shown in the end of posts
   authorBio = "Bento is a doggo who likes to code. Follow him on <a href='#'>Twitter</a>"
 
-# If you want to use fathom (https://usefathom.com) for analytics, add this section
-[params.fathomAnalytics]
+# If you want to use volument (https://volument.com) for analytics, add this section
+[params.volument]
   siteID = "XXXXX"
-  # Default value is cdn.usefathom.com, overwrite this if you are self-hosting
-  serverURL = "analytics.example.com"
-
-# If you want to use umami (https://umami.is/) for analytics, add this section
-[params.umami]
-  siteID = "XXXXX"
-  trackerScript = "//umami.example.com/umami.js"
 
 # Items in the top menu
 [menu]
